very basic UI, nested swapper implemented, bugs for overlapping slider

--- a/css/main.css
+++ b/css/main.css
@@ -4,21 +4,85 @@
 }
 
 .swiper-slide {
-    background-color: darkcyan;
+    /*background-color: darkcyan;*/
+}
+
+.page-swiper {
+    padding-top: 70px;
 }
 
 #title {
-    display: block;
     position: fixed;
     z-index: 200;
+    /*left: 20px;
+    top: 10px;*/
+}
+
+.category-title {
+    display: block;
+    width: 100%;
+    /*height: 20vh;*/
+}
+
+h2 {
+    display: inline-block;
+    width: auto;
+    margin-top: 7px;
+    margin-right: 10px;
+    margin-bottom: 0px;
+    font-size: 2.5em;
     left: 20px;
-    top: 10px;
+    top: 70px;
+    /*font-size: 10vw;*/
+}
+
+.search-form {
+    display: inline-block;
+    width: 50vw;
+    /*margin: 1.78rem 0 1.424rem 0;*/
+}
+
+.card.small.customizedCard {
+    width: 100px;
+    margin: auto;
+    height: 139.663px;
+}
+
+.card-image {
+    width: 100px;
+    height: 139.663px;
+    max-height: 139.663px;
+}
+
+input[type=text] {
+    display: inline-block;
+    width: auto;
+    height: 34px;
 }
 
 .swiper-slide h2 {
-    position: relative;
-    left: 20px;
-    top: 70px;
+    /*position: relative;*/
 }
 
-.content-container {}
+.content-box {
+    height: 30vh;
+    padding: 3px;
+    background-clip: content-box;
+    /*max-height: 200px;*/
+    /*max-width: 800px;*/
+}
+
+.content {
+    /*background-color: grey;*/
+    height: 100%;
+    width: 100%;
+}
+
+.main .row:first-of-type {
+    margin-bottom: 0px;
+}
+
+.row.valign {
+    margin-left: auto;
+    margin-right: auto;
+}
